<resources>
    <string name="app_name">MyPassport</string>
    <string name="sampleHobbies">Golf\nBasketball\nBaseball\nFishing\nRunning\n\nChess\nCheckers\n\Badminton\nCricket\nSquash\nWeights\nSitting\n</string>


    <string name="passport_profiles">Profiles</string>

    <string name="select_photo">Select Photo</string>

    <string name="external_storage_access_required">External storage access permission is needed for profile photos.</string>
    <string name="external_storage_unavailable">External storage access permission is not available.</string>
    <string name="ok">OK</string>
    <string name="personal">Personal</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_hobby">Add hobby</string>
    <string name="filter_by">Filter by</string>
    <string name="females">Females</string>
    <string name="males">Males</string>
    <string name="sort_by">Sort by:</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>


    <string name="default_filter">@string/show_all</string>
    <string name="show_all">Show all</string>
    <string name="males_only">Males only</string>
    <string name="females_only">Females only</string>
    <string-array name="filter_options">
        <item>@string/default_filter</item>
        <item>@string/males_only</item>
        <item>@string/females_only</item>
    </string-array>


    <string name="default_name_sort">@string/name_ascending</string>
    <string name="name_ascending">Name Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="age_ascending">Age Ascending</string>
    <string name="age_descending">Age Descending</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="hobby">Hobby</string>
    <string name="cannot_edit_profile">Cannnot edit profile.</string>
    <string name="error_saving">There was an error saving the profile.  Please try again.</string>
    <string name="error_deleting">There was an error deleting the profile.  Please try again.</string>
    <string name="error_enter_first_name">Please enter a first name.</string>
    <string name="error_enter_last_name">Please enter a last name.</string>


    <string-array name="sort_options">
        <item>@string/name_ascending</item>
        <item>@string/name_descending</item>
        <item>@string/age_ascending</item>
        <item>@string/age_descending</item>
    </string-array>
</resources>
