<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/leftVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/leftmargin" />


    <TextView
        android:id="@+id/txtFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/topmargin"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rdbGenderFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftmargin"
        android:layout_marginTop="@dimen/topmargin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/txtFilter">

        <RadioButton
            android:id="@+id/rdbMales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/males" />
        <!--android:checked="@{editProfileViewModel.uiProfile.isMale}"-->
        <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setMaleClicked()}"-->

        <RadioButton
            android:id="@+id/rdbFemales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/females" />
    </RadioGroup>
    <!--android:checked="@{editProfileViewModel.uiProfile.isFemale}"-->
    <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setFemaleClicked()}"-->


    <TextView
        android:id="@+id/txtSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topmargin"
        android:text="@string/sort_by"
        android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
    app:layout_constraintTop_toBottomOf="@id/rdbGenderFilter"
        />


    <RadioGroup
        android:id="@+id/rdbSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftmargin"
        android:layout_marginTop="@dimen/topmargin"
        android:orientation="vertical"
    app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
    app:layout_constraintTop_toBottomOf="@id/txtSortBy"
        >

        <RadioButton
            android:id="@+id/rdbNameAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_ascending" />
        <!--android:checked="@{editProfileViewModel.uiProfile.isMale}"-->
        <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setMaleClicked()}"-->

        <RadioButton
            android:id="@+id/rdbNameDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_descending" />
        <!--android:checked="@{editProfileViewModel.uiProfile.isFemale}"-->
        <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setFemaleClicked()}"-->


        <RadioButton
            android:id="@+id/rdbAgeAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_ascending" />
        <!--android:checked="@{editProfileViewModel.uiProfile.isFemale}"-->
        <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setFemaleClicked()}"-->


        <RadioButton
            android:id="@+id/rdbAgeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_descending" />
    </RadioGroup>
    <!--android:checked="@{editProfileViewModel.uiProfile.isFemale}"-->
    <!--android:onClick="@{() -> editProfileViewModel.uiProfile.setFemaleClicked()}"-->

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnApplyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/rdbSortBy" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@id/btnApplyFilter"
        app:layout_constraintTop_toBottomOf="@+id/rdbSortBy" />




</android.support.constraint.ConstraintLayout>